<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/choose_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:prompt="@string/choose_province_title"
        android:entries="@array/provinces" />

    <Spinner
        android:id="@+id/choose_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_town_title"
        android:spinnerMode="dialog"
        android:entries="@array/zachodniopomorskie_towns" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:id="@+id/ok_button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>